--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,24 @@
 language: python
-python:
-  - 2.7
-  - 3.4
-  - 3.5
+#python:
+#  - 2.7
+#  - 3.4
+#  - 3.5
 os:
   - linux
 sudo: required
 
 matrix:
   include:
-    - os: osx
-      osx_image: xcode7.3
-      language: generic
-      env:
-        - PYTHON=3.4
-    - os: osx
-      osx_image: xcode7.3
-      language: generic
-      env:
-        - PYTHON=3.5
+#    - os: osx
+#      osx_image: xcode7.3
+#      language: generic
+#      env:
+#        - PYTHON=3.4
+#    - os: osx
+#      osx_image: xcode7.3
+#      language: generic
+#      env:
+#        - PYTHON=3.5
     - os: osx
       osx_image: xcode7.3
       language: generic
@@ -30,7 +30,7 @@ before_install:
 
 install:
   - source cebar-env/bin/activate
-  - pip install -r requirements.txt
+  - pip install -r requirements.txt --user
 
 script:
   - python -m pytest tests
