--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,8 @@ before_install:
 
 install:
   - source cebar-env/bin/activate
-  - pip install -r requirements.txt --user
+  - pip install --upgrade pip
+  - pip install -r requirements.txt
 
 script:
   - python -m pytest tests
